[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
strum = { version = "0.24", features = ["derive"] }
heapless = "0.7"
petgraph = "0.6"
ndarray = "0.15"
